# megatiflo

./: .buildconfig  README.md  com.github.andrejgricenko.megatiflo.json  meson.build
data/: com.github.andrejgricenko.megatiflo.desktop  com.github.andrejgricenko.megatiflo.gresource.xml  megatiflo-window.ui  meson.build
src/: main.c  megatiflo-window.c  megatiflo-window.h  meson.build
